--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,12 @@ JWT_REFRESH_SECRET=change-this-to-a-different-strong-random-secret-min-32-chars
 # Refresh token: long-lived (recommended: 7-30 days)
 ACCESS_TOKEN_DURATION=5m
 REFRESH_TOKEN_DURATION=168h
+
+# Docker Registry Configuration
+# URL to your self-hosted Docker registry (e.g., http://localhost:5001, https://registry.example.com)
+REGISTRY_URL=http://localhost:5001
+
+# Registry Authentication (optional for development, required for production)
+# Leave empty for insecure/unauthenticated registries in development
+REGISTRY_USERNAME=
+REGISTRY_PASSWORD=
