list projects and project

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,9 @@ REGISTRY_URL=http://localhost:5001
 # Leave empty for insecure/unauthenticated registries in development
 REGISTRY_USERNAME=
 REGISTRY_PASSWORD=
+
+# Projects Configuration
+# Root directory where docker-compose projects are stored
+# Each subdirectory should contain a docker-compose.yml file
+# Example: /projects/app-blog/docker-compose.yml
+PROJECTS_ROOT_PATH=/projects
