--- a/.env.example
+++ b/.env.example
@@ -24,17 +24,53 @@ JWT_REFRESH_SECRET=change-this-to-a-different-strong-random-secret-min-32-chars
 ACCESS_TOKEN_DURATION=5m
 REFRESH_TOKEN_DURATION=168h
 
-# Docker Registry Configuration
-# URL to your self-hosted Docker registry (e.g., http://localhost:5001, https://registry.example.com)
-REGISTRY_URL=http://localhost:5001
-
-# Registry Authentication (optional for development, required for production)
-# Leave empty for insecure/unauthenticated registries in development
-REGISTRY_USERNAME=
-REGISTRY_PASSWORD=
-
 # Projects Configuration
 # Root directory where docker-compose projects are stored
 # Each subdirectory should contain a docker-compose.yml file
 # Example: /projects/app-blog/docker-compose.yml
 PROJECTS_ROOT_PATH=/projects
+
+# Platform Domain (REQUIRED for Traefik and Registry HTTPS access)
+# This is your base domain - platform services will use subdomains:
+#   - api.yourdomain.com     → Hubble API
+#   - registry.yourdomain.com → Docker Registry
+#   - traefik.yourdomain.com  → Traefik Dashboard (if enabled)
+HUBBLE_DOMAIN=
+
+# Traefik Configuration (Reverse Proxy & Load Balancer)
+# Enable Traefik for automatic HTTPS and routing
+HUBBLE_TRAEFIK_ENABLED=false
+
+# Email for Let's Encrypt certificate registration (required for HTTPS)
+# Leave empty to disable automatic HTTPS certificate generation
+HUBBLE_TRAEFIK_EMAIL=
+
+# Enable Traefik dashboard (accessible at http://localhost:8080)
+# Note: Dashboard is only accessible from localhost for security
+HUBBLE_TRAEFIK_DASHBOARD=false
+
+# Dashboard authentication (htpasswd format, optional but recommended)
+# Generate with: htpasswd -nb admin your-password
+# Example: admin:$apr1$xyz123$abc...
+HUBBLE_TRAEFIK_DASHBOARD_AUTH=
+
+# Docker Registry Configuration (Core Platform Feature)
+# The Hubble Registry is auto-provisioned for storing your Docker images
+# Default: enabled (set to false to disable)
+HUBBLE_REGISTRY_ENABLED=true
+
+# Allow image deletion via Docker Registry API
+# Default: true (you can delete images you pushed)
+HUBBLE_REGISTRY_DELETE_ENABLED=true
+
+# Registry storage location (where images are stored)
+# Default: /var/lib/hubble/registry
+HUBBLE_REGISTRY_STORAGE=/var/lib/hubble/registry
+
+# External Registry Configuration (Optional - for browsing external registries)
+# URL to an external Docker registry (e.g., http://localhost:5001)
+REGISTRY_URL=
+
+# External Registry Authentication (optional)
+REGISTRY_USERNAME=
+REGISTRY_PASSWORD=
