Replace bind mounts with Docker volumes for zero-config deployment
- Eliminates permission errors when creating /var/lib/hubble/ directories
- No manual sudo mkdir/chown steps required
- All persistent data in Docker volumes: registry-data, registry-auth, traefik-data, projects
- Updated htpasswd creation to write directly to volumes
- Updated documentation with new backup/restore commands using Docker volumes
- Achieves true zero-configuration: cp .env.example .env && docker compose up -d

--- a/.env.example
+++ b/.env.example
@@ -56,16 +56,13 @@ HUBBLE_TRAEFIK_DASHBOARD_AUTH=
 
 # Docker Registry Configuration (Core Platform Feature)
 # The Hubble Registry is auto-provisioned for storing your Docker images
+# Storage is managed automatically by Docker volumes (hubble-registry-data)
 # Default: enabled (set to false to disable)
 HUBBLE_REGISTRY_ENABLED=true
 
 # Allow image deletion via Docker Registry API
 # Default: true (you can delete images you pushed)
 HUBBLE_REGISTRY_DELETE_ENABLED=true
-
-# Registry storage location (where images are stored)
-# Default: /var/lib/hubble/registry
-HUBBLE_REGISTRY_STORAGE=/var/lib/hubble/registry
 
 # External Registry Configuration (Optional - for browsing external registries)
 # URL to an external Docker registry (e.g., http://localhost:5001)
