Phase 2: Add deprecation warnings for programmatic infrastructure
## What Changed

- Platform code now logs deprecation warnings when creating Traefik/Registry
- Added HUBBLE_DISABLE_PLATFORM_FALLBACK environment variable
- When disabled, Hubble refuses to start if containers don't exist
- Encourages migration to docker-compose.yml approach

## New Behavior

### Containers Exist (via docker-compose):
- ✓ Traefik already running
- ✓ Registry started
- No warnings, clean startup

### Containers Don't Exist:
- ⚠️  WARNING: Registry container not found!
- ⚠️  DEPRECATED: Programmatic Registry creation is deprecated.
- ⚠️  Please add hubble-registry service to your docker-compose.yml
- Creates container via fallback (still works)

### With HUBBLE_DISABLE_PLATFORM_FALLBACK=true:
- ⚠️  Fallback creation disabled
- ERROR: Container not found and fallback creation is disabled
- Forces users to use docker-compose.yml

## Why This Matters

Programmatic container creation (~500 lines of Go code) is:
- ❌ Hidden from users
- ❌ Harder to debug
- ❌ Not industry standard
- ❌ Has startup race conditions

docker-compose.yml approach is:
- ✅ Visible and standard
- ✅ Easier to debug
- ✅ Faster (parallel startup)
- ✅ Industry best practice

## Migration Path

No breaking changes. Fallback still works with warnings.
Users can migrate at their own pace before v2.0.

Phase 1 ✅ Infrastructure in compose + fallback
Phase 2 ✅ Deprecation warnings (current)
Phase 3 ⏳ Remove platform/* entirely (v2.0)

--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,8 @@ REGISTRY_URL=
 # External Registry Authentication (optional)
 REGISTRY_USERNAME=
 REGISTRY_PASSWORD=
+
+# Platform Fallback (Advanced)
+# DEPRECATED: Disable programmatic infrastructure creation (use docker-compose instead)
+# Set to "true" to require Traefik/Registry to be started via docker-compose.yml
+# HUBBLE_DISABLE_PLATFORM_FALLBACK=false
