--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - HUBBLE_REGISTRY_ENABLED=${HUBBLE_REGISTRY_ENABLED:-true}
       - HUBBLE_REGISTRY_DELETE_ENABLED=${HUBBLE_REGISTRY_DELETE_ENABLED:-true}
       - HUBBLE_REGISTRY_STORAGE=/var/lib/hubble/registry
+      - HUBBLE_DISABLE_PLATFORM_FALLBACK=${HUBBLE_DISABLE_PLATFORM_FALLBACK:-false}
     networks:
       - hubble
     labels:
