--- a/.env.example
+++ b/.env.example
@@ -30,39 +30,18 @@ REFRESH_TOKEN_DURATION=168h
 # Example: /projects/app-blog/docker-compose.yml
 PROJECTS_ROOT_PATH=/projects
 
-# Platform Domain (REQUIRED for Traefik and Registry HTTPS access)
+# Platform Domain (REQUIRED for HTTPS access)
 # This is your base domain - platform services will use subdomains:
-#   - api.yourdomain.com     → Hubble API
+#   - hubble.yourdomain.com  → Hubble Web UI
 #   - registry.yourdomain.com → Docker Registry
-#   - traefik.yourdomain.com  → Traefik Dashboard (if enabled)
 HUBBLE_DOMAIN=
 
-# Traefik Configuration (Reverse Proxy & Load Balancer)
-# Enable Traefik for automatic HTTPS and routing
-HUBBLE_TRAEFIK_ENABLED=false
-
-# Email for Let's Encrypt certificate registration (required for HTTPS)
-# Leave empty to disable automatic HTTPS certificate generation
+# Traefik Configuration (configured in docker-compose.yml)
+# Email for Let's Encrypt certificate registration
 HUBBLE_TRAEFIK_EMAIL=
 
-# Enable Traefik dashboard (accessible at http://localhost:8080)
-# Note: Dashboard is only accessible from localhost for security
+# Traefik Dashboard (accessible at http://localhost:8080)
 HUBBLE_TRAEFIK_DASHBOARD=false
-
-# Dashboard authentication (htpasswd format, optional but recommended)
-# Generate with: htpasswd -nb admin your-password
-# Example: admin:$apr1$xyz123$abc...
-HUBBLE_TRAEFIK_DASHBOARD_AUTH=
-
-# Docker Registry Configuration (Core Platform Feature)
-# The Hubble Registry is auto-provisioned for storing your Docker images
-# Storage is managed automatically by Docker volumes (hubble-registry-data)
-# Default: enabled (set to false to disable)
-HUBBLE_REGISTRY_ENABLED=true
-
-# Allow image deletion via Docker Registry API
-# Default: true (you can delete images you pushed)
-HUBBLE_REGISTRY_DELETE_ENABLED=true
 
 # External Registry Configuration (Optional - for browsing external registries)
 # URL to an external Docker registry (e.g., http://localhost:5001)
@@ -71,8 +50,3 @@ REGISTRY_URL=
 # External Registry Authentication (optional)
 REGISTRY_USERNAME=
 REGISTRY_PASSWORD=
-
-# Platform Fallback (Advanced)
-# DEPRECATED: Disable programmatic infrastructure creation (use docker-compose instead)
-# Set to "true" to require Traefik/Registry to be started via docker-compose.yml
-# HUBBLE_DISABLE_PLATFORM_FALLBACK=false
