Fix HTTPS configuration with dev/prod split
Resolve 'site not secure' issue by separating development (HTTP) and production (HTTPS) configurations.

Changes:
- docker-compose.yml: Default to HTTP (web entrypoint) for localhost development
- docker-compose.prod.yml: NEW production override with HTTPS enabled
- Removed Traefik dashboard (port 8080) completely for security
- Upgraded Traefik from v3.0 to v3.6
- Updated .env.example with clearer instructions
- Added DEPLOYMENT_GUIDE.md with comprehensive setup instructions
- Added deploy-production.sh for automated production deployment

Development (localhost):
  docker compose up -d
  Access: http://hubble.localhost (no HTTPS errors)

Production (real domain):
  docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d
  Access: https://hubble.yourdomain.com (Let's Encrypt certificates)

Fixes: Browser showing 'site not secure' on localhost

--- a/.env.example
+++ b/.env.example
@@ -30,18 +30,21 @@ REFRESH_TOKEN_DURATION=168h
 # Example: /projects/app-blog/docker-compose.yml
 PROJECTS_ROOT_PATH=/projects
 
-# Platform Domain (REQUIRED for HTTPS access)
-# This is your base domain - platform services will use subdomains:
+# Platform Domain
+# - Development: Set to "localhost" (HTTP only, no HTTPS)
+# - Production: Set to your domain (e.g., "yourdomain.com")
+#   Services will be available at:
 #   - hubble.yourdomain.com  → Hubble Web UI
 #   - registry.yourdomain.com → Docker Registry
-HUBBLE_DOMAIN=
+HUBBLE_DOMAIN=localhost
 
-# Traefik Configuration (configured in docker-compose.yml)
+# Traefik HTTPS Configuration (REQUIRED for production with real domain)
 # Email for Let's Encrypt certificate registration
+# Leave empty for development (localhost)
 HUBBLE_TRAEFIK_EMAIL=
 
-# Traefik Dashboard (accessible at http://localhost:8080)
-HUBBLE_TRAEFIK_DASHBOARD=false
+# Registry Configuration
+HUBBLE_REGISTRY_DELETE_ENABLED=true
 
 # External Registry Configuration (Optional - for browsing external registries)
 # URL to an external Docker registry (e.g., http://localhost:5001)
